--- a/manifests/app/backend.yaml
+++ b/manifests/app/backend.yaml
@@ -2,8 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-app
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/metrics"
+    prometheus.io/port: backendport
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: backend
@@ -14,18 +19,22 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ghcr.io/jasonsmithio/backend:v1
+        image: jeikens/udaobsrv-backend:v2
+        imagePullPolicy: Always
         ports:
-        - containerPort: 8081
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: backend
+  labels:
+    app: backend-svc
 spec:
   selector:
     app: backend
   ports:
-    - port: 8081
+    - name: backendport
+      port: 8081
       targetPort: 8080
   type: LoadBalancer
