--- a/manifests/app/frontend.yaml
+++ b/manifests/app/frontend.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-app
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: frontend
@@ -14,7 +16,8 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/jasonsmithio/myfrontend:v1
+        image: jeikens/udaobsrv-frontend:v2
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
@@ -22,10 +25,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  labels:
+    app: frontend
 spec:
   selector:
     app: frontend
   ports:
-    - port: 8080
+    - name: frontendport
+      port: 8080
       targetPort: 8080
   type: LoadBalancer
