--- a/reference-app/backend/Dockerfile
+++ b/reference-app/backend/Dockerfile
@@ -1,19 +1,20 @@
 # Use the official Python image.
 # https://hub.docker.com/_/python
-FROM python:3.7-slim
+FROM python:3.10
 
 # Copy local code to the container image.
 ENV APP_HOME /app
 WORKDIR $APP_HOME
-COPY . ./
+COPY requirements.txt ./
 
 ARG PROJECT_ID
 ENV PROJECT_ID ${PROJECT_ID}
-
 
 # Install production dependencies.
 RUN apt-get update && \
     pip install --upgrade pip && \
     pip install -r requirements.txt
+
+COPY . ./
 
 CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8080", "app:app"]
