--- a/reference-app/frontend/Dockerfile
+++ b/reference-app/frontend/Dockerfile
@@ -14,4 +14,5 @@ RUN apt-get update && \
 
 COPY . ./
 
-CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8080", "app:app"]
+CMD ["python", "app.py"]
+#CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8080", "app:app"]
